kubernetes/zzzOldCluster/deployments/databases/influxdb/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: influxdb
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:DrYtUhd0xjrgW6AWGaGM+DnZiFW3Rbz54pwF0g==,iv:TMGOFVUhxM7gz599+6LafGnZEx546xLFwcgb3J04uU4=,tag:OK9w1EexGJTX/z052+sCNw==,type:str]
          kind: Rule
          services:
            - name: influxdb
              port: 8086
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWSG9DLzhaQjlBcDdGV29H
[...]
            s6dmJmZZPS6wyWiBR/TlKIvIyTiqZ94onad4E42vqFpQJHfT14cg0A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T14:38:40Z"
    mac: ENC[AES256_GCM,data:prax30V3yQ0MsmaDLNkzB09e4DsbD5at8ndwKI7cPmqE8z6Qw6WXJiaqPt2SEwyrQ9QqWN2qeOZyJR5OLZ1gyu0QrEjUsUdZtzurHcwYXevKwAj4spmTcn5+8Tko3bMmotGffAdbzHHaU0b+Rf2qcbJYSlLF7NLEi4PfslKYZ2w=,iv:r/3gbvPxz09i7p2pR4cebZVHqHfl5xHFBwn2bb9d3i0=,tag:cIuukb0nYpi2B7vHEwi/HQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: chronograf
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:ISQ3OCZqdo6TWjOEfN+hSVGmI2EJc2xlvXGVJXgo,iv:z/xwZ/s5+9ZhUMUii8MikEINBDNIneDxhKW6i0LoAwU=,tag:kBvU6vPA7yps7pA1bViZgg==,type:str]
          kind: Rule
          services:
            - name: chronograf
              port: 8888
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWSG9DLzhaQjlBcDdGV29H
[...]
            s6dmJmZZPS6wyWiBR/TlKIvIyTiqZ94onad4E42vqFpQJHfT14cg0A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T14:38:40Z"
    mac: ENC[AES256_GCM,data:prax30V3yQ0MsmaDLNkzB09e4DsbD5at8ndwKI7cPmqE8z6Qw6WXJiaqPt2SEwyrQ9QqWN2qeOZyJR5OLZ1gyu0QrEjUsUdZtzurHcwYXevKwAj4spmTcn5+8Tko3bMmotGffAdbzHHaU0b+Rf2qcbJYSlLF7NLEi4PfslKYZ2w=,iv:r/3gbvPxz09i7p2pR4cebZVHqHfl5xHFBwn2bb9d3i0=,tag:cIuukb0nYpi2B7vHEwi/HQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
